# TrafficFlowPrediction

./: .gitignore  App.py  Pipfile  README.md  TrafficFlowPrediction.ipynb  _data.ipynb  _data_old.ipynb  app.py  colab.ipynb  gui.py  main.ipynb  main.py  mapper.py  process.py  pyproject.toml  requirements.txt  requirements_window.txt  route_map.html  testapp.py  train.py  utils.py
RoutePrediction/: gui.py  process.py  process2.py  process3.py  process4.py  process5.py
data/: data.ipynb  data.py
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat  runxlrd.py
model/: cnn.h5  download.py  gru loss.csv  gru.h5  lstm loss.csv  lstm.h5  model.py  saes loss.csv  saes.h5
model/gru.pb/: fingerprint.pb  saved_model.pb
model/gru.pb/variables/: variables.data-00000-of-00001  variables.index
model/lstm.pb/: fingerprint.pb  saved_model.pb
model/lstm.pb/variables/: variables.data-00000-of-00001  variables.index
model/saes.pb/: fingerprint.pb  saved_model.pb
model/saes.pb/variables/: variables.data-00000-of-00001  variables.index
