[tool.poetry]
name = "trafficflowprediction"
version = "0.1.0"
description = ""
authors = ["newbee1905"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
tensorflow = "2.13"
numpy = "1.24.3"
pandas = "^2.1.1"
scikit-learn = "^1.3.0"
keras = "2.13.1"
matplotlib = "^3.8.0"
xlrd = "^2.0.1"
fastapi = "^0.103.2"
uvicorn = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
